chores: created, altered, and designed full stack app

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <name> ADlister project</name>
+    <description>sample spring adlister</description>
+
     <build>
         <plugins>
             <plugin>
